--- a/Clase/ejemplo1.html
+++ b/Clase/ejemplo1.html
@@ -2,8 +2,19 @@
 <html>
 <head>
 	<title>mi primera pagina</title>
+	<meta charset="utf-8">
 </head>
-<body>
+<body><!--este es mi tutulo    -->
+
+
+
+	
+<h1> PAGINA LABORATORIO</h1>
+<h2>Otro texto</h2>
+<h3>Este es otro texto</h3>
+<h4>otro texto</h4>
+<p>y su diámetro en geometría euclidiana.1​ Es un número irracional2​ y una de las constantes matemáticas más importantes. Se emplea frecuentemente en matemáticas, física e ingeniería. El valor numérico de π, truncado a sus primeras cifras, es el siguiente</p>
+
 
 </body>
 </html>
