--- a/Clase/ejemplo2.html
+++ b/Clase/ejemplo2.html
@@ -11,5 +11,15 @@
 		LABORATORIO
 	</h1>
 </header>
+<nav>
+	<ul>
+		<li><a href="ejemplo1.html"   target="_blank">Inicio</a></li>
+		<li><a href="">Nosotros</a></li>
+		<li><a href="">Servicios</a></li>
+		<li><a href="">Contáctenos</a></li>
+	</ul>
+</nav>
+
+
 </body>
 </html>
