--- a/Clase/ejemplo2.html
+++ b/Clase/ejemplo2.html
@@ -19,7 +19,22 @@
 		<li><a href="">Contáctenos</a></li>
 	</ul>
 </nav>
+<div>
+	<img src="imagenes/img.jpg" width="500" height="400">
+</div>
+<div>
+	<img src="imagenes/entorno.jpg" width="500" height="400">
+</div>
 
+<div>
+	<video controls="true" width="500" height="400">
+		<source src="videos/video1.mp4" type="video/mp4">
+	</video>
+</div>
+
+<div>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/6NowoUCl0R8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
 
 </body>
 </html>
