--- a/plantilla-blog/index.html
+++ b/plantilla-blog/index.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+	<!--inicio de barra de navegacion -->
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Navbar</a>
@@ -46,13 +47,77 @@
   </div>
 </nav>
 	</header>
+<!-- final de barra de navegacion-->
 
+<!-- inicio de titulo-->
 	<div class="jumbotron jumbotron-fluid bg-light">
   <div class="container">
     <h1 class="display-4">Plantilla Blog</h1>
     <p class="lead">Plantilla de una diseño de blog</p>
   </div>
 </div>
+<!-- fin de titulo-->
+<!-- inicio contenido-->
+<div class="container">
+	<div class="row">
+		<div class="col-md-8">
+			<!-- esta seccion es para noticias-->
+			<div>
+				<h2>Tablas</h2>
+				<p>29, Octubre de 2018</p>
+				<p>Como se hace una tabla con bootstrap</p>
+				<hr>
+				<table border="1">
+					<tr>
+						<td>Item</td>
+						<td>Nombre</td>
+						<td>Apellido</td>
+					</tr>
+					<tr>
+						<td>1</td>
+						<td>Pepito</td>
+						<td>perez</td>
+						<td>ejemplo</td>
+					</tr>
+				</table>
+				<hr>
+				<table class="table table-striped">
+					<tr>
+						<td>Nombre</td>
+						<td>22 Octubre</td>
+						<td>24 Octubre</td>
+						<td>26 Octubre</td>
+					</tr>
+					<tr>
+						<td>Rafel Adame</td>
+						<td> x </td>
+						<td> x </td>
+						<td> x </td>
+					</tr>
+					<tr>
+						<td>Plata Plata</td>
+						<td> x </td>
+						<td> x </td>
+						<td> x </td>
+					</tr>
+					<tr>
+						<td>Mariela</td>
+						<td> x </td>
+						<td> x </td>
+						<td> x </td>
+					</tr>
+					
+				</table>
+			</div>
+			<!-- fin seccion noticias-->
+		</div>
+		<div class="col-md-4">
+			otro titulo
+		</div>
+	</div>
+
+</div>
+<!-- fin contenido-->
 
 </body>
 </html>
