--- a/plantilla-blog/index.html
+++ b/plantilla-blog/index.html
@@ -11,7 +11,7 @@
 <body>
 	<!--inicio de barra de navegacion -->
 	<header>
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -67,6 +67,7 @@
 				<p>29, Octubre de 2018</p>
 				<p>Como se hace una tabla con bootstrap</p>
 				<hr>
+				<h3>Tabla normal</h3>
 				<table border="1">
 					<tr>
 						<td>Item</td>
@@ -81,6 +82,7 @@
 					</tr>
 				</table>
 				<hr>
+				<h3>Tabla con estilo bootstrap</h3>
 				<table class="table table-striped">
 					<tr>
 						<td>Nombre</td>
@@ -108,8 +110,57 @@
 					</tr>
 					
 				</table>
+				<hr>
+				<h3>Tabla profesional con bootstrap</h3>
+
+				<table class="table">
+					<thead>
+						<tr class="table-primary">
+							<th>Item</th>
+							<th>Nombre</th>
+							<th>Apellidos</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr class="bg-primary">
+							<td>1</td>
+							<td>Pepito</td>
+							<td>Perez</td>
+						</tr>
+						<tr class="table-success">
+							<td>1</td>
+							<td>Pepito</td>
+							<td>Perez</td>
+						</tr>
+						<tr>
+							<td>1</td>
+							<td>Pepito</td>
+							<td>Perez</td>
+						</tr>
+						<tr>
+							<td>1</td>
+							<td>Pepito</td>
+							<td>Perez</td>
+						</tr>
+						<tr>
+							<td>1</td>
+							<td>Pepito</td>
+							<td>Perez</td>
+						</tr>
+					</tbody>
+				</table>
+
+
 			</div>
 			<!-- fin seccion noticias-->
+			<!-- inicio noticia botones -->
+				<div>
+					<h2>Botones</h2>
+					<p>31 Octubre, 2018</p>
+					<p>Manera de hacer botones</p>
+					<a href="#"><button>esto es un boton</button></a>
+				</div>
+			<!-- fin de noticia botones-->
 		</div>
 		<div class="col-md-4">
 			otro titulo
