--- a/Clase/ejemplo2.html
+++ b/Clase/ejemplo2.html
@@ -35,6 +35,10 @@
 <div>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/6NowoUCl0R8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
-
+<div>
+	<audio controls="true">
+		<source src="audios/audio.mp3" type="audio/mp3">
+	</audio>
+</div>
 </body>
 </html>
