--- a/javascript/index.html
+++ b/javascript/index.html
@@ -30,6 +30,9 @@
 	<button type="button" onclick="document.getElementById('ocultar').style.display='none'">ocultar</button>
 	<button type="button" onclick="document.getElementById('ocultar').style.display='block'">mostrar</button>
 </div>
+<br>
+<br>
+<a href="pagina2.html"> <button type="button">Ir a pagina 2</button></a>
 
 </body>
 </html>
