--- a/plantilla-blog/index.html
+++ b/plantilla-blog/index.html
@@ -50,7 +50,7 @@
 <!-- final de barra de navegacion-->
 
 <!-- inicio de titulo-->
-	<div class="jumbotron jumbotron-fluid bg-light">
+	<div class="jumbotron jumbotron-fluid bg-warning">
   <div class="container">
     <h1 class="display-4">Plantilla Blog</h1>
     <p class="lead">Plantilla de una diseño de blog</p>
@@ -158,12 +158,24 @@
 					<h2>Botones</h2>
 					<p>31 Octubre, 2018</p>
 					<p>Manera de hacer botones</p>
-					<a href="#"><button>esto es un boton</button></a>
+					<a href="#"><button type="button" class="btn btn-primary">esto es un boton</button></a>
+
+					<button type="button" class="btn btn-secondary">otro boton</button>
 				</div>
 			<!-- fin de noticia botones-->
 		</div>
 		<div class="col-md-4">
-			otro titulo
+			<div class="p-3 bg-light">
+				<h4>Esta caja es para publicidad</h4>
+			</div>
+			<div class="p-3">
+				<ol class="list-unstyled">
+					<li>2018</li>
+					<li><a href="2017.html">2017</a></li>
+					<li>2016</li>
+					<li>2015</li>
+				</ol>
+			</div>
 		</div>
 	</div>
 
